nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-vhost
  labels:
    tier: backend

spec:
  rules:
  - host: nginx-php-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/var/www"
        backend:
          service:
            name: nginx
            port: 
              number: 80
